syntax = "proto3";

option go_package = "github.com/distributed-nvme/distributed-nvme/pkg/proto/nodeagent";

package nodeagent;

service DiskNodeAgent {
  rpc SyncupDn(SyncupDnRequest) returns(SyncupDnReply) {}
  rpc CheckDn(CheckDnRequest) returns(CheckDnReply) {}
  rpc SyncupSpLd(SyncupSpLdRequest) returns(SyncupSpLdReply) {}
  rpc CheckSpLd(CheckSpLdRequest) returns(CheckSpLdReply) {}
  rpc GetDevSize(GetDevSizeRequest) returns(GetDevSizeReply) {}
}

service ControllerNodeAgent {
  rpc SyncupCn(SyncupCnRequest) returns(SyncupCnReply) {}
  rpc CheckCn(CheckCnRequest) returns(CheckCnReply) {}
  rpc SyncupSpCntlr(SyncupSpCntlrRequest) returns(SyncupSpCntlrReply) {}
  rpc CheckSpCntlr(CheckSpCntlrRequest) returns(CheckSpCntlrReply) {}
  rpc Flush(FlushRequest) returns(FlushReply) {}
  rpc CleanupFence(CleanupFenceRequest) returns(CleanupFenceReply) {}
}

message StatusInfo {
  uint32 code = 1;
  string msg = 2;
  int64 timestamp = 3;
}

message QosConf {
  uint64 rbps = 1;
  uint64 wbps = 2;
  uint64 riops = 3;
  uint64 wiops = 4;
}

message NvmeTReq {
  uint32 seq_ch = 1;
}

message NvmeListener {
  string tr_type = 1;
  string adr_fam = 2;
  string tr_addr = 3;
  string tr_svc_id = 4;
}

message NvmePortConf {
  string port_num = 1;
  NvmeListener nvme_listener = 2;
  NvmeTReq tr_eq = 3;
}

message GetDevSizeRequest {
  string dev_path = 1;
}

message GetDevSizeReply {
  StatusInfo status_info = 1;
  uint64 size = 2;
}

message SpLdId {
  string sp_id = 1;
  string ld_id = 2;
}

message DnConf {
  string dn_id = 1;
  int64 revision = 2;
  string dev_path = 3;
  NvmePortConf nvme_port_conf = 4;
  repeated SpLdId sp_ld_id_list = 5;
}

message SyncupDnRequest {
  DnConf dn_conf = 1;
}

message DnInfo {
  StatusInfo status_info = 1;
}

message SyncupDnReply {
  DnInfo dn_info = 1;
}

message CheckDnRequest {
  string dn_id = 1;
  int64 revision = 2;
}

message CheckDnReply {
  DnInfo dn_info = 1;
}

message SpLdConf {
  string dn_id = 1;
  string sp_id = 2;
  string ld_id = 3;
  int64 revision = 4;
  uint64 start = 5;
  uint64 length = 6;
  QosConf qos_conf = 7;
  repeated string cn_id_list = 8;
  bool inited = 9;
}

message SyncupSpLdRequest {
  SpLdConf sp_ld_conf = 1;
}

message SpLdInfo {
  StatusInfo status_info = 1;
}

message SyncupSpLdReply {
  SpLdInfo sp_ld_info = 1;
}

message CheckSpLdRequest {
  string dn_id = 1;
  string sp_id = 2;
  string ld_id = 3;
  int64 revision = 4;
}

message CheckSpLdReply {
  SpLdInfo sp_ld_info = 1;
}

message SpCntlrId {
  string sp_id = 1;
  string cntlr_id = 2;
}

message CnConf {
  string cn_id = 1;
  int64 revision = 2;
  NvmePortConf nvme_port_conf = 3;
  repeated SpCntlrId sp_cntlr_id_list = 4;
}

message SyncupCnRequest {
  CnConf cn_conf = 1;
}

message CnInfo {
  StatusInfo status_info = 1;
}

message SyncupCnReply {
  CnInfo cn_info = 1;
}

message CheckCnRequest {
  string cn_id = 1;
  int64 revision = 2;
}

message CheckCnReply {
  CnInfo cn_info = 1;
}

message StripeConf {
  uint64 stripe_size = 1;
}

message ThinPoolConf {
  uint64 data_block_size = 1;
  uint64 low_water_mark = 2;
  bool error_if_no_space = 3;
}

message RedundancyConf {
  uint32 redun_type = 1;
  uint64 region_size = 2;
  uint64 chunk_size = 3;
  uint32 daemon_sleep = 4;
  uint32 min_recovery_rate = 5;
  uint32 max_recovery_rate = 6;
  uint32 stripe_cache = 7;
  uint32 journal_mode = 8;
}

message SnapConf {
  uint32 dev_id = 1;
  uint32 ori_id = 2;
}

message LdCnConf {
  string ld_id = 1;
  string dn_id = 2;
  NvmePortConf nvme_port_conf = 3;
  uint32 ld_idx = 4;
  uint64 ld_size = 5;
}

message GrpConf {
  string grp_id = 1;
  uint32 grp_idx = 2;
  uint64 meta_size = 3;
  uint64 data_size = 4;
  repeated LdCnConf ld_cn_conf_list = 5;
  bool no_sync = 6;
  uint32 rebuild_idx = 7;
  repeated uint32 omit_idx_list = 8;
}

message LocalLegConf {
  string leg_id = 1;
  bool reload = 2;
  uint32 cntlid_min = 3;
  uint32 cntlid_max = 4;
  repeated GrpConf grp_conf_list = 5;
}

message RemoteLegConf {
  string leg_id = 1;
  string cn_id = 2;
  NvmeListener nvme_listener = 3;
}

message CloneConf {
  uint64 region_size = 1;
  uint32 hydration_threshold = 2;
  uint32 hydration_batch_size = 3;
}

message MtConf {
  string mt_id = 1;
  string old_ld_id = 2;
  string new_ld_id = 3;
  CloneConf clone_conf = 4;
  LdCnConf meta_ld_conf = 5;
}

message ItConf {
  string it_id = 1;
  uint32 dev_id = 2;
  NvmeListener nvme_listener = 3;
  uint64 size = 4;
  CloneConf clone_conf = 5;
  LdCnConf meta_ld_conf = 6;
}

message NsConf {
  string ns_id = 1;
  string ns_num = 2;
  uint64 size = 3;
  uint32 dev_id = 4;
}

message HostConf {
  string host_id = 1;
  string host_nqn = 2;
}

message SsConf {
  string ss_id = 1;
  string nqn = 2;
  repeated NsConf ns_conf_list = 3;
  repeated HostConf host_conf_list = 4;
}

message ActiveCntlrConf {
  StripeConf stripe_conf = 1;
  ThinPoolConf thin_pool_conf = 2;
  RedundancyConf redundancy_conf = 3;
  SnapConf creating_snap_conf = 4;
  SnapConf deleting_snap_conf = 5;
  repeated LocalLegConf local_leg_conf_list = 6;
  repeated RemoteLegConf remote_leg_conf_list = 7;
  repeated SnapConf snap_conf_list = 8;
  repeated MtConf mt_conf_list = 9;
  repeated ItConf it_conf_list = 10;
}

message SpCntlrConf {
  string cn_id = 1;
  string sp_id = 2;
  string cntlr_id = 3;
  int64 revision = 4;
  NvmePortConf nvme_port_conf = 5;
  repeated SsConf ss_conf_list = 6;
  ActiveCntlrConf active_cntlr_conf = 7;
}

message SyncupSpCntlrRequest {
  SpCntlrConf sp_cntlr_conf = 1;
}

message ThinPoolInfo {
  uint64 transaction_id = 1;
  uint64 used_meta_blocks = 2;
  uint64 total_meta_blocks = 3;
  uint64 used_data_blocks = 4;
  uint64 total_data_blocks = 5;
  int64 held_metadata_root = 6;
  string mode = 7;
  bool discard_passdown = 8;
  string error_or_queue = 9;
  bool needs_check = 10;
  uint64 metadata_low_watermark = 11;
}

message RedundancyInfo {
  bytes health_chars = 1;
  uint64 sync_curr = 2;
  uint64 sync_total = 3;
  string sync_action = 4;
  uint64 mismatch_cnt = 5;
  uint64 data_offset = 6;
  uint32 journal_char = 7;
}

message NvmePortInfo {
  StatusInfo status_info = 1;
}

message LdCnInfo {
  StatusInfo status_info = 1;
}

message GrpInfo {
  string grp_id = 1;
  StatusInfo status_info = 2;
  RedundancyInfo meta_redun_info = 3;
  RedundancyInfo data_redun_info = 4;
  repeated LdCnInfo ld_cn_info_list = 5;
}

message LocalLegInfo {
  string leg_id = 1;
  StatusInfo status_info = 2;
  ThinPoolInfo thin_pool_info = 3;
  repeated GrpInfo grp_info_list = 4;
}

message RemoteLegInfo {
  string leg_id = 1;
  StatusInfo status_info = 2;
  string fence_id = 3;
}

message SnapInfo {
  uint32 dev_id = 1;
  StatusInfo status_info = 2;
}

message CloneInfo {
  uint32 metadata_block_size = 1;
  uint32 used_metadata_blocks = 2;
  uint32 total_metadata_blocks = 3;
  uint32 hydrated_regions = 4;
  uint32 total_regions = 5;
  uint32 hydrating_regions = 6;
  string clone_metadata_mode = 7;
}

message MtInfo {
  string mt_id = 1;
  StatusInfo status_info = 2;
  CloneInfo clone_info = 3;
  LdCnInfo meta_ld_info = 4;
}

message ItInfo {
  string it_id = 1;
  StatusInfo status_info = 2;
  CloneInfo clone_info = 3;
  LdCnInfo meta_ld_info = 4;
}

message HostInfo {
  string host_id = 1;
  StatusInfo status_info = 2;
}

message NsInfo {
  string ns_id = 1;
  StatusInfo status_info = 2;
}

message SsInfo {
  string ss_id = 1;
  StatusInfo status_info = 2;
  repeated NsInfo ns_info_list = 3;
  repeated HostInfo host_info_list = 4;
}

message ActiveCntlrInfo {
  repeated LocalLegInfo local_leg_info_list = 1;
  repeated RemoteLegInfo remote_leg_info_list = 2;
  repeated MtInfo mt_info_list = 3;
  repeated ItInfo it_info_list = 4;
}

message SpCntlrInfo {
  StatusInfo status_info = 1;
  NvmePortInfo nvme_port_info = 2;
  repeated SsInfo ss_info_list = 3;
  ActiveCntlrInfo active_cntlr_info = 4;
}

message SyncupSpCntlrReply {
  SpCntlrInfo sp_cntlr_info = 1;
}

message CheckSpCntlrRequest {
  string cn_id = 1;
  string sp_id = 2;
  string cntlr_id = 3;
  int64 revision = 4;
}

message CheckSpCntlrReply {
  SpCntlrInfo sp_cntlr_info = 1;
}

message FlushRequest {
  string cn_id = 1;
  string sp_id = 2;
  string cntlr_id = 3;
  int64 revision = 4;
}

message FlushReply {
  StatusInfo status_info = 1;
}

message CleanupFenceRequest {
  repeated string fence_id_list = 1;
}

message CleanupFenceReply {
  StatusInfo status_info = 1;
}
